# IndexTTS-Rust

./: .gitattributes  .gitignore  CLAUDE.md  CODEBASE_ANALYSIS.md  Cargo.toml  DIRECTORY_STRUCTURE.txt  EXPLORATION_SUMMARY.md  README.md  SOURCE_FILE_LISTING.txt  config.yaml  context.md  scratch.py  scratch2  scratch2.rs
benches/: inference.rs  mel_spectrogram.rs
crates/marine_salience/: Cargo.toml
crates/marine_salience/src/: config.rs  ema.rs  lib.rs  packet.rs  processor.rs
docs/: Integrating Marine Algorithm into IndexTTS-Rust.md  liquid-rust.code-workspace
examples/: analyze_chris.rs  cases.jsonl  marine_test.rs
models/: bigvgan.onnx  bigvgan.onnx.data  speaker_encoder.onnx  speaker_encoder.onnx.data
scripts/: manage.sh
src/: error.rs  lib.rs  main.rs
src/audio/: dsp.rs  io.rs  mel.rs  mod.rs  resample.rs
src/config/: mod.rs
src/model/: embedding.rs  gpt.rs  mod.rs  session.rs
src/pipeline/: mod.rs  synthesis.rs
src/quality/: affect.rs  mod.rs  prosody.rs
src/text/: mod.rs  normalizer.rs  phoneme.rs  tokenizer.rs
src/vocoder/: activations.rs  bigvgan.rs  mod.rs
tests/: integration_onnx.rs  integration_pipeline.rs
tools/: convert_to_onnx.py
